# http_factory

./: ARCHITECTURE_DOCUMENTATION.md  CODE_QUALITY_SUMMARY.md  COMPLETE_ARCHITECTURE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MTM_SYSTEM_DOCUMENTATION.md  REFACTORING_SUMMARY.md  SOLID_BEFORE_AFTER_COMPARISON.md  SOLID_PRINCIPLES_TRANSFORMATION.md  SOLUTION_SUMMARY.md  STANDARDIZED_PARAMETERS.md  authentication_examples.py  complete_demo.py  comprehensive_demo.py  configuration_examples.py  custom_service_example.py  demo_standardized.py  design_patterns_demo.py  examples.py  fix_code_quality.py  integrated_mtm_demo.py  mtm_improved_solid.py  mtm_trailing_system.py  pyproject.toml  pytest.ini  service_interface_example.py  simple_demo.py  solid_analysis_mtm.py  solid_principles_demo.py  standardized_examples.py  test_broker_integrations.py  test_header_logic.py  test_headers.py  test_parameters.py  test_parameters_simple.py  test_refactored_services.py  test_scalable_architecture.py  test_url_building.py  xts_service_example.py
src/network_test/: __init__.py  __main__.py  config.py  main services_tested.py  main.py  main_copy.py  main_copy_2.py  main_testing_done.py  network.py  services.py
src/network_test/services/: __init__.py  base_service.py  broker_configurations.py  custom_service.py  factory.py  groww_service.py  interface.py  models.py  parameters.py  scalable_architecture.py  upstox_service.py  xts_service.py
