[project]
name = "network-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RajinderSingh", email = "rajinder.singh@zooplus.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.1",
]

[project.scripts]
network-test = "network_test:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
